tests/expectations/compiler/function/9_inputs_fail.out
DCE_ENABLED:
Error [EPAR0370005]: expected ; -- found '}'
    --> compiler-test:16:5
     |
  16 |     }}
     |     ^
DCE_DISABLED:
Error [EPAR0370005]: expected ; -- found '}'
    --> compiler-test:16:5
     |
  16 |     }}
     |     ^